# smart-notification-service

./: .gitignore  README.md  TECHNICAL_OVERVIEW.md  pyproject.toml
core/: celery.py  settings.py  urls.py
core_utils/: apps.py
notifications/: admin.py  models.py  serializers.py  tasks.py  views.py
notifications/migrations/: 0001_initial.py
notifications/providers/: __init__.py  base.py  email_provider.py
tenants/: admin.py  middleware.py  models.py  serializers.py  services.py  views.py
tenants/migrations/: 0001_initial.py
